--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,11 @@
     <string name="navigation_history">History</string>
     <string name="history_fragment">History Fragment</string>
     <string name="name_placeholder">Tyrion Lannister</string>
+    <string name="user_email">tyrion@gmail.com</string>
     <string name="current_balance">Current Balance</string>
     <string name="balance_placeholder">Rp 1.000.000</string>
+    <string name="user_phone_number">08112234456</string>
+    <string name="user_sex">Male</string>
     <string name="current_temperature">Temperature</string>
     <string name="temperature_placeholder">26°C</string>
     <string name="main_features_headline">Main Features</string>
@@ -31,4 +34,9 @@
     <string name="sign_in">SIGN IN</string>
     <string name="sign_in_to_chrysus">Sign In</string>
     <string name="logout">Logout</string>
+    <string name="completed_payment">Completed</string>
+    <string name="payment_history">PAYMENT HISTORY</string>
+    <string name="name">Name</string>
+    <string name="Phone_Number">Phone Number</string>
+    <string name="Jenis_Kelamin">Jenis Kelamin</string>
 </resources>
