--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="phone_number">Phone Number</string>
     <string name="transfer_amount">Transfer Amount</string>
     <string name="city_placeholder">Bandung</string>
+    <string name="send_money_send_btn_text">SEND</string>
 </resources>
